deployment/openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pm-chatbot
  labels:
    name: pm-chatbot
    app: pm-chatbot
