deployment/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pm-chatbot-route
  namespace: pm-chatbot
  labels:
    app: pm-chatbot
spec:
  host: pm-chatbot.apps.cluster-znvdr.znvdr.sandbox203.opentlc.com
  to:
    kind: Service
    name: streamlit-service
    weight: 100
  port:
    targetPort: streamlit
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
